fix(calcdex): added back hidden container overflow

--- a/src/pages/Calcdex/Calcdex.module.scss
+++ b/src/pages/Calcdex/Calcdex.module.scss
@@ -15,7 +15,7 @@
 
 .container {
   @include position.absolute-fill;
-  // overflow: hidden;
+  overflow: hidden;
 
   &, *, *::before, *::after {
     box-sizing: border-box;
